[tool.poetry]
name = "crud"
version = "0.1.0"
description = ""
authors = ["skgur07 <pigjaoki0970@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymysql = "^1.1.1"
fastapi = "^0.115.12"
uvicorn = "^0.34.1"
sqlalchemy = "^2.0.40"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
